--- a/src/component/Header/SearchSection/SearchSection.module.css
+++ b/src/component/Header/SearchSection/SearchSection.module.css
@@ -4,6 +4,16 @@
   padding: 1rem 3rem;
 }
 
+.formControl {
+  width: 100%;
+  box-sizing:border-box;
+  padding: 0.5rem;
+  font-size: 1rem;
+  font-weight: 400;
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
+}
+
 .btn__container {
   display: flex;
   justify-content: space-between;
@@ -11,11 +21,11 @@
   flex-wrap: wrap;
 }
 
-.sort__container {
+.searchBy {
   display: flex;
   align-items: baseline;   
 }
 
-.sort__container span {
+.searchBy span {
   padding: 0 1rem 0 0;
 }
