--- a/src/component/Main/Main.module.css
+++ b/src/component/Main/Main.module.css
@@ -1,12 +1,7 @@
 .Main {
-  display: flex;  
-  flex-wrap: wrap;
-  justify-content: center;
-  padding: 1rem;  
-}
-
-.main__container {
+  margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
-  max-width: 1060px;  
+  max-width: 1060px;
+  padding: 1rem 3rem;
 }
