feat: footer, buttin, add result search string

--- a/src/component/Header/Header.module.css
+++ b/src/component/Header/Header.module.css
@@ -1,4 +1,4 @@
-.Header {
+.header__container {
   color: white;
   padding: 1rem;
   background-image: linear-gradient(
@@ -6,4 +6,26 @@
       rgba(0, 0, 0, 0.8) 100%
     ),
     url(https://assets.nflxext.com/ffe/siteui/vlv3/70731dc8-8977-4ed7-9a0a-421f510aea00/8cbb059e-e3a8-4e36-80fe-33b90a88b39f/RU-en-20200914-popsignuptwoweeks-perspective_alpha_website_large.jpg);
+}
+
+.h1 { 
+  margin: 0 auto;
+  max-width: 1060px;
+  padding: 1rem 3rem;
+}
+
+.resultSort__container {
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem 3rem;
+  font-size: 1rem;
+  font-weight: 400;
+}
+
+.resultSort span, .resultCount span {
+  padding: 0 1rem;
+}
+
+.resultSort span:nth-child(3) {
+  color: tomato;
 }
