--- a/src/components/Main/MovieItem/MovieItem.css
+++ b/src/components/Main/MovieItem/MovieItem.css
@@ -1,20 +1,34 @@
-.movie-item {  
+.movie-item {
   color: gray;
-  margin: 1rem;  
+  margin: 1rem;
+  width: 300px;
+  height: 505px;
 }
 
 .movie-item__img {
   width: 300px;
+  cursor: pointer;
 }
 
 .movie-item__info {
-  display: flex;  
+  display: flex;
+  font-size: 0.8rem;
   justify-content: space-between;
   padding: 0.3rem 0.5rem;
 }
 
+.movie-item__title {
+  font-size: 0.9rem;
+  color: black;
+  text-transform: uppercase;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .movie-item__year {
-  font-size: 0.8rem;
+  font-size: 0.6rem;  
   padding: 0 0.4rem;
+  white-space: nowrap;
   border: 1px solid gray;
 }
