--- a/src/components/Main/MovieItem/MovieItem.css
+++ b/src/components/Main/MovieItem/MovieItem.css
@@ -2,18 +2,20 @@
   color: gray;
   margin: 1rem;
   width: 300px;
-  height: 505px;
+  height: 532px;
+  cursor: pointer;
 }
 
 .movie-item__img {
   width: 300px;
-  cursor: pointer;
+  height: 475px;  
 }
 
 .movie-item__info {
   display: flex;
   font-size: 0.8rem;
   justify-content: space-between;
+  align-items: center;
   padding: 0.3rem 0.5rem;
 }
 
@@ -27,8 +29,8 @@
 }
 
 .movie-item__year {
-  font-size: 0.6rem;  
-  padding: 0 0.4rem;
+  font-size: 0.6rem;
+  padding: 0.2rem 0.4rem;
   white-space: nowrap;
   border: 1px solid gray;
 }
